<?xml version="1.0"?>
<package format="2">
  <name>cf_msgs</name>
  <version>0.0.0</version>
  <description>The cf_msgs package</description>

  <maintainer email="abhi@todo.todo">abhi</maintainer>
  <license>TODO</license>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
